fix: correct styles and reorder PostItem component elements for readability

--- a/app/components/blog/PostItem.module.scss
+++ b/app/components/blog/PostItem.module.scss
@@ -39,15 +39,26 @@
 	flex-basis: 67%;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-	font-size: 0.88em;
 
 	ul {
 		margin: 0;
-		line-height: 1rem;
+		overflow: hidden;
+		max-height: 2rem;
 	}
 	li {
 		display: inline-block;
 		list-style: none;
-		padding: 0;
+		padding: 0.1rem 0.25rem;
+		background-color: #80808033;
+
+		font-size: 0.75em;
+		line-height: 1rem;
+
+		&:not(:first-child) {
+			margin-left: 0.2rem;
+		}
+		&:not(:last-child) {
+			margin-right: 0.2rem;
+		}
 	}
 }
